--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "formik": "^2.1.4",
     "formik-material-ui": "^2.0.0-alpha.3",
     "grapesjs": "^0.16.2",
+    "grapesjs-blocks-basic": "^0.1.8",
+    "grapesjs-tabs": "^0.2.2",
     "i": "^0.3.6",
     "npm": "^6.14.2",
     "react": "^16.12.0",
