--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-unless": "^0.5.0",
+    "handlebars": "^4.7.3",
     "jsonwebtoken": "^8.5.1",
+    "juice": "^6.0.0",
     "mongoose": "^5.8.0",
     "morgan": "^1.9.1",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "request": "latest",
     "validator": "^12.1.0",
     "winston": "^3.2.1"
   },
