--- a/package.json
+++ b/package.json
@@ -4,34 +4,35 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.25",
-    "@types/react": "^16.9.19",
+    "@types/node": "^12.12.30",
+    "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
-    "date-fns": "^2.0.0-beta.5",
+    "date-fns": "^2.11.0",
     "formik": "^2.1.4",
-    "formik-material-ui": "^2.0.0-alpha.3",
-    "grapesjs": "^0.16.2",
+    "formik-material-ui": "2.0.0-alpha.3",
+    "grapesjs": "^0.16.3",
     "grapesjs-blocks-basic": "^0.1.8",
     "grapesjs-tabs": "^0.2.2",
+    "grapesjs-touch": "^0.1.1",
     "i": "^0.3.6",
-    "npm": "^6.14.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "npm": "^6.14.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "typescript": "^3.7.5"
+    "react-scripts": "^3.4.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
