--- a/.github/workflows/node_ci.yml
+++ b/.github/workflows/node_ci.yml
@@ -21,8 +21,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - run: npm run build --if-present
     - run: npm test
       env:
         CI: true
-        NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
