--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@toppev/loyally-campaigns": "^0.1.0",
     "ajv": "^6.10.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
