--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@
 MONGO_URI=mongodb://localhost:27017/myapp
 JWT_SECRET=ASDFGHJKL123456789
 NODE_ENV=development
+# User polling service
+POLLING_AUTHENTICATION=secretstring
+POLLING_BASE_URL=http://localhost:8080/
+# Page screenshot service
+SS_BASE_URL=http://localhost:3004/
+SS_SERVICE_URL=http://localhost:3005/
