--- a/package.json
+++ b/package.json
@@ -2,37 +2,40 @@
   "name": "kantis-panel",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.9.7",
+    "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^3.2.10",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.30",
-    "@types/react": "^16.9.25",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-router-dom": "^5.1.3",
+    "@testing-library/jest-dom": "^5.7.0",
+    "@testing-library/react": "^10.0.4",
+    "@testing-library/user-event": "^10.2.0",
+    "@toppev/loyally-campaigns": "^0.2.0",
+    "@types/jest": "^25.2.1",
+    "@types/lodash": "^4.14.150",
+    "@types/node": "^12",
+    "@types/qrcode.react": "^1.0.0",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
-    "date-fns": "^2.11.0",
+    "clipboard-copy": "^3.1.0",
+    "date-fns": "^2.13.0",
     "formik": "^2.1.4",
     "formik-material-ui": "2.0.0-alpha.3",
-    "grapesjs": "^0.16.3",
+    "grapesjs": "^0.16.12",
     "grapesjs-blocks-basic": "^0.1.8",
     "grapesjs-tabs": "^0.2.2",
     "grapesjs-touch": "^0.1.1",
-    "i": "^0.3.6",
-    "npm": "^6.14.3",
+    "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-dropzone": "^10.2.1",
-    "react-router-dom": "^5.1.2",
+    "react-dropzone": "^11.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.2"
   },
   "scripts": {
     "start": "react-scripts start",
