--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   qr_code_scanner: ^0.0.12
   http: ^0.12.1
   provider: ^4.1.2
+  flutter_secure_storage: ^3.3.3
 
 
 dev_dependencies:
