--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "kantis-panel",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.10.0",
@@ -29,6 +28,7 @@
     "grapesjs-blocks-basic": "^0.1.8",
     "grapesjs-tabs": "^0.2.2",
     "grapesjs-touch": "^0.1.1",
+    "js-cookie": "^2.2.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
