--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grapesjs-blocks-basic": "^0.1.8",
     "grapesjs-tabs": "^0.2.2",
     "grapesjs-touch": "^0.1.1",
+    "grapesjs-tui-image-editor": "^0.1.3",
     "js-cookie": "^2.2.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
