Add web-push (intial version, not tested)

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ POLLING_BASE_URL=http://localhost:8080/
 # Page screenshot service
 SS_BASE_URL=http://localhost:3004/
 SS_SERVICE_URL=http://localhost:3005/
+# Push notifications
+VAPID_PUBLIC_KEY=<<public VAPID key>>
+VAPID_PRIVATE_KEY=<<private VAPID key>>
+VAPID_SUBJECT=mailto:mail@example.com
