--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "validator": "^13.0.0",
+    "web-push": "^3.4.4",
     "winston": "^3.2.1"
   },
   "devDependencies": {
