--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ SS_SERVICE_URL=http://localhost:3005/
 # Push notifications
 VAPID_PUBLIC_KEY=<<public VAPID key>>
 VAPID_PRIVATE_KEY=<<private VAPID key>>
-VAPID_SUBJECT=mailto:mail@example.com
+VAPID_CONTACT=mailto:mail@example.com
