--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^12.12.42",
     "@types/qrcode.react": "^1.0.1",
     "@types/react": "^16.9.35",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
@@ -32,6 +33,7 @@
     "js-cookie": "^2.2.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-router-dom": "^5.2.0",
