--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@toppev/loyalty-campaigns": "^0.3.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "busboy": "^0.3.1",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
