Push notification icon/badge might work

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 # Example .env file
+PUBLIC_URL=http://localhost:3001/
 MONGO_URI=mongodb://localhost:27017/myapp
 JWT_SECRET=ASDFGHJKL123456789
 NODE_ENV=development
