--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Example .env file
 PUBLIC_URL=http://localhost:3001/
+FRONTEND_ORIGIN=http://localhost:3000
 MONGO_URI=mongodb://localhost:27017/myapp
 JWT_SECRET=ASDFGHJKL123456789
 NODE_ENV=development
