Fix tests (and captcha lol)

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,5 @@ SS_SERVICE_URL=http://localhost:3005/
 VAPID_PUBLIC_KEY=<<public VAPID key>>
 VAPID_PRIVATE_KEY=<<private VAPID key>>
 VAPID_CONTACT=mailto:mail@example.com
+# reCaptcha
+CAPTCHA_SECRET_KEY=dawdakwgdha
