--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,7 +15,8 @@ jobs:
           java-version: '12.x'
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '1.7.8+hotfix.4'
+          channel: 'stable'
+          flutter-version: '2.x'
       - run: flutter pub get
       - run: flutter test
       - run: flutter build apk --debug # --split-per-abi
