--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: subosito/flutter-action@v1
       - run: flutter pub get
       - run: flutter test
-      - run: flutter build apk --debug # --split-per-abi
+      - run: flutter build apk # --split-per-abi
       - name: Create a Release APK
         uses: ncipollo/release-action@v1
         with:
