--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://panel.getloyalty.app",
   "name": "kantis-panel",
   "version": "0.1.0",
   "private": true,
@@ -23,6 +24,7 @@
     "axios": "^0.19.2",
     "clipboard-copy": "^3.1.0",
     "date-fns": "^2.14.0",
+    "dompurify": "^2.0.12",
     "formik": "^2.1.4",
     "formik-material-ui": "2.0.0-alpha.3",
     "grapesjs": "^0.16.12",
@@ -63,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^2.0.2",
     "@types/react-google-recaptcha": "^1.1.2"
   }
 }
