Description, title etc, change management panel -> control panel

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Loyalty app management panel",
+  "name": "Loyalty app control panel",
   "short_name": "Loyalty Panel",
   "icons": [
     {
