--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@toppev/loyalty-campaigns": "^0.4.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
     "cookie-parser": "^1.4.5",
