--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,16 @@ dependencies:
 
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.7.3"
   flutter_test:
     sdk: flutter
+
+# "flutter pub run flutter_launcher_icons:main"
+# to update launcher icons
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
