--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.4.0",
     "@toppev/loyalty-campaigns": "^0.4.0",
+    "@types/dompurify": "^2.0.2",
     "@types/jest": "^25.2.3",
     "@types/lodash": "^4.14.153",
     "@types/node": "^12.12.42",
@@ -20,6 +21,7 @@
     "@types/react": "^16.9.35",
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.8",
+    "@types/react-google-recaptcha": "*",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "clipboard-copy": "^3.1.0",
@@ -27,7 +29,7 @@
     "dompurify": "^2.0.12",
     "formik": "^2.1.4",
     "formik-material-ui": "2.0.0-alpha.3",
-    "grapesjs": "^0.16.12",
+    "grapesjs": "^0.16.18",
     "grapesjs-blocks-basic": "^0.1.8",
     "grapesjs-tabs": "^0.2.2",
     "grapesjs-touch": "^0.1.1",
@@ -41,9 +43,7 @@
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "typescript": "^3.9.3",
-    "@types/dompurify": "^2.0.2",
-    "@types/react-google-recaptcha": "*"
+    "typescript": "^3.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
