--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,5 @@ VAPID_PRIVATE_KEY=<<private VAPID key>>
 VAPID_CONTACT=mailto:mail@example.com
 # reCaptcha
 CAPTCHA_SECRET_KEY=dawdakwgdha
+# Domain used in cookies
+COOKIE_DOMAIN=getloyalty.app
