--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-jest": "^23.18.0",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
+    "readline-sync": "^1.4.10",
     "supertest": "^4.0.2"
   }
 }
