--- a/package.json
+++ b/package.json
@@ -33,14 +33,14 @@
     "request": "^2.88.2",
     "validator": "^13.0.0",
     "web-push": "^3.4.4",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "readline-sync": "^1.4.10"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.18.0",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
-    "readline-sync": "^1.4.10",
     "supertest": "^4.0.2"
   }
 }
