--- a/scripts/template_manifest.json
+++ b/scripts/template_manifest.json
@@ -4,12 +4,27 @@
   "icons": [
     {
       "src": "%REACT_APP_API_URL%/business/icon",
-      "sizes": "512x512 192x192 64x64 32x32 16x16",
+      "sizes": "64x64 48x48 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "%REACT_APP_API_URL%/business/icon/?size=180",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "%REACT_APP_API_URL%/business/icon/?size=512",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "%REACT_APP_API_URL%/business/icon/?size=512",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
-  "display": "standalone",
+  "display": "fullscreen",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
