--- a/scripts/template_manifest.json
+++ b/scripts/template_manifest.json
@@ -24,7 +24,7 @@
     }
   ],
   "start_url": ".",
-  "display": "fullscreen",
+  "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
