--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,10 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12
+    - name: Authenticate with GitHub package registry
+      run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.READ_ORG_PACKAGES }}" > ~/.npmrc
     - run: npm ci
+    - run: npm run build --if-present
     - run: npm test
       env:
         CI: true
