Options for captcha mode

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ VAPID_PRIVATE_KEY=<<private VAPID key>>
 VAPID_CONTACT=mailto:mail@example.com
 # reCaptcha
 CAPTCHA_SECRET_KEY=dawdakwgdha
+# Either "ALL" "IF_EMPTY" (default) or "DISABLED" see src/middlewares/captcha.js
+CAPTCHA_MODE=IF_EMPTY
 # Domain used in cookies
 COOKIE_DOMAIN=getloyalty.app
 
