Default pages from env (DEFAULT_PAGES)

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,4 @@ COOKIE_DOMAIN=getloyalty.app
 
 # Changes the name of the session cookie to avoid replacing any other cookies
 DEMO_SERVER=true
+DEFAULT_PAGES=5f83880bea5b9a42a94ecab4,5f8388113cb9df27e5ac0ae4
