Add paths condition in tests

--- a/.github/workflows/backend.test.yml
+++ b/.github/workflows/backend.test.yml
@@ -3,7 +3,13 @@
 
 name: Backend test
 
-on: [push]
+on:
+  pull_request:
+    paths:
+      - 'loyalty-backend/**'
+  push:
+    paths:
+      - 'loyalty-backend/**'
 
 jobs:
   build:
