Development environment seems to be ok (at least almost)

--- a/loyalty-panel/.env
+++ b/loyalty-panel/.env
@@ -1,1 +1,4 @@
 REACT_APP_CAPTCHA_SITE_KEY=6LdpOrQZAAAAAKXdqtpwPJBWbPec16lVZYkzoRNh
+PORT=3002
+# Try this if you have issues with file changes not being detected in development environment
+# CHOKIDAR_USEPOLLING=true
