--- a/loyalty-app/.env
+++ b/loyalty-app/.env
@@ -6,3 +6,7 @@ REACT_APP_POLLING_API_URL=https://api.getloyalty.app/messages
 # REACT_APP_PUBLIC_VAPID_KEY=BHV-G5Sh1tFz_zI1j7YElds2Ve1v-4027Nghh2XtEPMJXeO2qXewmm6DDY7XptSeYozmHhbkUVNwVAETH7SYzdI
 
 SKIP_PREFLIGHT_CHECK=true
+
+
+# Try this if you have issues with file changes not being detected in development environment
+#CHOKIDAR_USEPOLLING=true
