--- a/loyalty-app/package.json
+++ b/loyalty-app/package.json
@@ -23,7 +23,7 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "PORT=3002 react-scripts start",
+    "start": "react-scripts start",
     "build": "node ./scripts/createManifest.js && react-scripts build react-scripts build && cra-append-sw ./public/custom-sw.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
