--- a/loyalty-backend/dev.env
+++ b/loyalty-backend/dev.env
@@ -1,7 +1,8 @@
 # Example .env file
 PUBLIC_URL=http://localhost:3001/
 FRONTEND_ORIGIN=http://localhost:3000
-MONGO_URI=mongodb://localhost:27017/myapp
+MONGO_URI=mongodb://mongo:27017/myapp
+# MONGO_URI=mongodb://localhost:27017/myapp
 JWT_SECRET=ASDFGHJKL123456789
 NODE_ENV=development
 # User polling service
@@ -11,16 +12,16 @@ POLLING_BASE_URL=http://localhost:8080/
 SS_BASE_URL=http://localhost:3004/
 SS_SERVICE_URL=http://localhost:3005/
 # Push notifications
-VAPID_PUBLIC_KEY=<<public VAPID key>>
-VAPID_PRIVATE_KEY=<<private VAPID key>>
+VAPID_PUBLIC_KEY=BNpdcPAl5OZqA-6mvdyx4BPSDdGnLpMO2nmEXpTLHygG_6wO-S8A4NdOAvW2903n84neELZseysUvuU7Xg5aVvE
+VAPID_PRIVATE_KEY=UWRPQE0hck8782EYg3CfjfX_Hrb_JPqOB3ozMhtPrL0
 VAPID_CONTACT=mailto:mail@example.com
 # reCaptcha
 CAPTCHA_SECRET_KEY=dawdakwgdha
 # Either "ALL" "IF_EMPTY" (default) or "DISABLED", see src/middlewares/captcha.js
-CAPTCHA_MODE=IF_EMPTY
+CAPTCHA_MODE=DISABLED
 # Domain used in cookies
 COOKIE_DOMAIN=getloyalty.app
 
 # Changes the name of the session cookie to avoid replacing any other cookies
 DEMO_SERVER=true
-DEFAULT_PAGES=5f83880bea5b9a42a94ecab4,5f8388113cb9df27e5ac0ae4
+DEFAULT_PAGES=
