Dev setup stuff

--- a/loyalty-backend/dev.env
+++ b/loyalty-backend/dev.env
@@ -23,5 +23,5 @@ CAPTCHA_MODE=DISABLED
 COOKIE_DOMAIN=getloyalty.app
 
 # Changes the name of the session cookie to avoid replacing any other cookies
-DEMO_SERVER=true
+# DEMO_SERVER=true
 DEFAULT_PAGES=
