--- a/loyalty-backend/.env.example
+++ b/loyalty-backend/.env.example
@@ -19,7 +19,7 @@ CAPTCHA_SECRET_KEY=dawdakwgdha
 # Either "ALL" "IF_EMPTY" (default) or "DISABLED", see src/middlewares/captcha.js
 CAPTCHA_MODE=IF_EMPTY
 # Domain used in cookies
-COOKIE_DOMAIN=getloyalty.app
+COOKIE_DOMAIN=example.com
 
 # Changes the name of the session cookie to avoid replacing any other cookies
 DEMO_SERVER=true
