--- a/loyalty-backend/dev.env
+++ b/loyalty-backend/dev.env
@@ -20,8 +20,8 @@ CAPTCHA_SECRET_KEY=dawdakwgdha
 # Either "ALL" "IF_EMPTY" (default) or "DISABLED", see src/middlewares/captcha.js
 CAPTCHA_MODE=DISABLED
 # Domain used in cookies
-COOKIE_DOMAIN=getloyalty.app
+#COOKIE_DOMAIN=example.com
 
 # Changes the name of the session cookie to avoid replacing any other cookies
-# DEMO_SERVER=true
+#DEMO_SERVER=true
 DEFAULT_PAGES=
