--- a/loyalty-app/Dockerfile
+++ b/loyalty-app/Dockerfile
@@ -44,13 +44,13 @@ ARG PUBLIC_VAPID_KEY="none"
 ENV REACT_APP_PUBLIC_VAPID_KEY $PUBLIC_VAPID_KEY
 
 
-COPY .. /app
+COPY . /app
 RUN yarn build
 
 FROM nginx:stable-alpine
 # Copy build and nginx config
 COPY --from=build /app/build /usr/share/nginx/html
-COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
