--- a/loyalty-app/package.json
+++ b/loyalty-app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.14.1",
     "@types/react-dom": "^16.9.10",
     "@types/react-helmet": "^6.0.0",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "cra-append-sw": "^2.7.0",
@@ -18,6 +19,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
