--- a/loyalty-backend/.env.example
+++ b/loyalty-backend/.env.example
@@ -22,5 +22,6 @@ CAPTCHA_MODE=IF_EMPTY
 COOKIE_DOMAIN=example.com
 
 # Changes the name of the session cookie to avoid replacing any other cookies
-DEMO_SERVER=true
+# defaults to 'loyalty_session'
+SESSION_NAME=testing_session
 DEFAULT_PAGES=5f83880bea5b9a42a94ecab4,5f8388113cb9df27e5ac0ae4
