Change env var name and more

--- a/loyalty-backend/dev.env
+++ b/loyalty-backend/dev.env
@@ -1,6 +1,6 @@
 # Example .env file
 PUBLIC_URL=http://localhost:3001/
-FRONTEND_ORIGIN=http://localhost:3000
+APP_ORIGIN=http://localhost:3000
 MONGO_URI=mongodb://mongo:27017/myapp
 # MONGO_URI=mongodb://localhost:27017/myapp
 JWT_SECRET=ASDFGHJKL123456789
