Disallow semicolons in campaigns

--- a/loyalty-campaigns/.eslintrc.json
+++ b/loyalty-campaigns/.eslintrc.json
@@ -15,6 +15,10 @@
     "ecmaVersion": 2018
   },
   "rules": {
+    "semi": [
+      "warn",
+      "never"
+    ]
   },
   "plugins": [
     "jest"
