--- a/loyalty-app/package.json
+++ b/loyalty-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.1.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -21,13 +22,13 @@
     "react-helmet": "^6.1.0",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.3",
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "node ./scripts/createManifest.js && react-scripts build react-scripts build && cra-append-sw ./public/custom-sw.js",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "node ./scripts/createManifest.js && craco build && cra-append-sw ./public/custom-sw.js",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,7 +47,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^9",
     "dotenv": "^8.2.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^7",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
