--- a/loyalty-backend/package.json
+++ b/loyalty-backend/package.json
@@ -18,7 +18,6 @@
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
-    "csurf": "^1.11.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-unless": "^0.5.0",
@@ -35,8 +34,7 @@
     "sharp": "^0.26.0",
     "to-ico": "^1.1.5",
     "validator": "^13.0.0",
-    "web-push": "^3.4.4",
-    "winston": "^3.3.3"
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "eslint": "^7.8.0",
