--- a/loyalty-backend/package.json
+++ b/loyalty-backend/package.json
@@ -24,6 +24,7 @@
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "juice": "^7.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^5.10.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.11",
