Correct cookie name in devmode, some changes to resetPassword script

--- a/loyalty-backend/dev.env
+++ b/loyalty-backend/dev.env
@@ -23,5 +23,5 @@ CAPTCHA_MODE=DISABLED
 #COOKIE_DOMAIN=example.com
 
 # Changes the name of the session cookie to avoid replacing any other cookies
-#DEMO_SERVER=true
+SESSION_NAME=loyalty_dev_session
 DEFAULT_PAGES=
