--- a/loyalty-backend/package.json
+++ b/loyalty-backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@toppev/getloyalty-campaigns": "^1.0.5",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
