--- a/loyalty-panel/package.json
+++ b/loyalty-panel/package.json
@@ -24,6 +24,7 @@
     "@types/react-google-recaptcha": "^2.1.0",
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
+    "chart.js": "^3.2.1",
     "clipboard-copy": "^3.1.0",
     "date-fns": "^2.21.1",
     "dompurify": "^2.2.8",
@@ -37,6 +38,7 @@
     "js-cookie": "^2.2.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^3.0.3",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.3.2",
