--- a/loyalty-panel/package.json
+++ b/loyalty-panel/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^10.4.0",
     "@toppev/getloyalty-campaigns": "^1.0.5",
+    "@types/codemirror": "^5.60.0",
     "@types/dompurify": "^2.2.2",
     "@types/jest": "^25.2.3",
     "@types/lodash": "^4.14.168",
@@ -25,6 +26,7 @@
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.19.2",
     "clipboard-copy": "^3.1.0",
+    "codemirror": "^5.61.0",
     "date-fns": "^2.21.1",
     "dompurify": "^2.2.8",
     "formik": "^2.1.5",
@@ -37,6 +39,7 @@
     "js-cookie": "^2.2.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
+    "react-codemirror2": "^7.2.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.3.2",
