--- a/.github/workflows/backend.build-push.yml
+++ b/.github/workflows/backend.build-push.yml
@@ -13,11 +13,13 @@ jobs:
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
+      - name: Login to registry
         uses: docker/login-action@v1
         with:
+          registry: ${{ secrets.DOCKER_REGISTRY_URL }}
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
