--- a/.github/workflows/backend.build-push.yml
+++ b/.github/workflows/backend.build-push.yml
@@ -19,7 +19,8 @@ jobs:
           registry: ${{ secrets.DOCKER_REGISTRY_URL }}
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
-
+      - name: Authenticate with GitHub package registry
+        run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.READ_ORG_PACKAGES }}" > ~/.npmrc
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
