Attempt fixing backend build push ci workflow

--- a/.github/workflows/backend.build-push.yml
+++ b/.github/workflows/backend.build-push.yml
@@ -27,3 +27,5 @@ jobs:
           context: ./loyalty-backend
           push: true
           tags: ${{ secrets.DOCKER_REGISTRY_URL }}/loyalty-backend:develop
+          build-args: |
+            NPM_TOKEN=${{ secrets.READ_ORG_PACKAGES }}
