--- a/loyalty-backend/package.json
+++ b/loyalty-backend/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^8.5.1",
     "juice": "^7.0.0",
     "lodash": "^4.17.21",
+    "mime-types": "^2.1.32",
     "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.0",
