--- a/loyalty-backend/package.json
+++ b/loyalty-backend/package.json
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@toppev/getloyalty-campaigns": "^1.0.5",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
@@ -40,10 +39,37 @@
     "web-push": "^3.4.4"
   },
   "devDependencies": {
+    "@toppev/getloyalty-campaigns": "^1.0.5",
+    "@types/bcrypt": "^10.0.28-alpha",
+    "@types/body-parser": "^1.19.1",
+    "@types/busboy": "^0.2.4",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cookie-session": "^2.0.43",
+    "@types/cors": "^2.8.12",
+    "@types/eslint": "^7.28.0",
+    "@types/express": "^4.17.13",
+    "@types/express-unless": "^0.5.2",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/lodash": "^4.14.172",
+    "@types/mime-types": "^2.1.1",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^16.7.6",
+    "@types/nodemailer": "^6.4.4",
+    "@types/nodemon": "^1.19.1",
+    "@types/passport": "^0.4.7",
+    "@types/passport-local": "^1.0.34",
+    "@types/readline-sync": "^1.4.4",
+    "@types/request": "^2.48.7",
+    "@types/sharp": "^0.28.5",
+    "@types/supertest": "^2.0.11",
+    "@types/validator": "^13.6.3",
+    "@types/web-push": "^3.3.2",
     "eslint": "^7.25.0",
     "eslint-plugin-jest": "^24.3.6",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   }
 }
