Change default page ids

--- a/loyalty-backend/.env.example
+++ b/loyalty-backend/.env.example
@@ -24,4 +24,4 @@ COOKIE_DOMAIN=example.com
 # Changes the name of the session cookie to avoid replacing any other cookies
 # defaults to 'loyalty_session'
 SESSION_NAME=testing_session
-DEFAULT_PAGES=5f83880bea5b9a42a94ecab4,5f8388113cb9df27e5ac0ae4
+DEFAULT_PAGES=6120ea038d5ae30019b260a9,613331fe26c51b001218f6ef,6133327d26c51b001218f6f4
