--- a/loyalty-backend/dev.env
+++ b/loyalty-backend/dev.env
@@ -1,5 +1,5 @@
 # Example .env file
-PUBLIC_URL=http://localhost:3001/
+PUBLIC_URL=http://localhost:3001
 APP_ORIGIN=http://localhost:3000
 MONGO_URI=mongodb://mongo:27017/myapp
 # MONGO_URI=mongodb://localhost:27017/myapp
