Use TZ (timezone) in logs etc

--- a/loyalty-backend/.env.example
+++ b/loyalty-backend/.env.example
@@ -25,3 +25,5 @@ COOKIE_DOMAIN=example.com
 # defaults to 'loyalty_session'
 SESSION_NAME=testing_session
 DEFAULT_PAGES=6120ea038d5ae30019b260a9,613331fe26c51b001218f6ef,6133327d26c51b001218f6f4
+
+TZ=Europe/Helsinki
