--- a/loyalty-backend/dev.env
+++ b/loyalty-backend/dev.env
@@ -25,3 +25,5 @@ CAPTCHA_MODE=DISABLED
 # Changes the name of the session cookie to avoid replacing any other cookies
 SESSION_NAME=loyalty_dev_session
 DEFAULT_PAGES=
+
+TZ=Europe/Helsinki
