--- a/.github/workflows/backend.ci-cd.yml
+++ b/.github/workflows/backend.ci-cd.yml
@@ -1,5 +1,4 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+# Test and build & push the docker image
 
 name: Backend test
 
@@ -12,8 +11,7 @@ on:
       - 'loyalty-backend/**'
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
@@ -47,3 +45,29 @@ jobs:
         image: mongo:4.2.3
         ports:
           - 27017:27017
+
+  push-docker:
+    if: github.event_name != 'pull_request' && github.ref == 'refs/heads/develop'
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ secrets.DOCKER_REGISTRY_URL }}
+          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./loyalty-backend
+          push: true
+          tags: ${{ secrets.DOCKER_REGISTRY_URL }}/loyalty-backend:develop
+          build-args: |
+            NPM_TOKEN=${{ secrets.READ_ORG_PACKAGES }}
