--- a/.github/workflows/campaigns.ci-cd.yml
+++ b/.github/workflows/campaigns.ci-cd.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: loyalty-campaigns test
+name: loyalty-campaigns test and publish
 
 on:
   pull_request:
@@ -10,10 +10,11 @@ on:
   push:
     paths:
       - 'loyalty-campaigns/**'
+  release:
+    types: [created]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
@@ -39,4 +40,27 @@ jobs:
         run: npm test
         env:
           CI: true
+        working-directory: loyalty-campaigns
+
+  publish-gpr:
+    needs: test
+    if: github.event_name == 'release' && github.event.action == 'created'
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
+      - name: NPM CI
+        run: npm ci
+        working-directory: loyalty-campaigns
+      - name: Test
+        run: npm test
+        working-directory: loyalty-campaigns
+      - name: Publish
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         working-directory: loyalty-campaigns
