--- a/.github/workflows/scanner.build-and-release.yml
+++ b/.github/workflows/scanner.build-and-release.yml
@@ -6,7 +6,25 @@ on:
       - 'v*'
 
 jobs:
-  build:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+      - name: Pub get
+        run: flutter pub get
+        working-directory: scanner-app
+      - name: Test
+        run: flutter test
+        working-directory: scanner-app
+      - name: Build apk
+        run: flutter build apk
+        working-directory: scanner-app
+  release:
+    needs: test
     name: Build APK
     runs-on: ubuntu-latest
     timeout-minutes: 60
