--- a/.github/workflows/panel.ci-cd.yml
+++ b/.github/workflows/panel.ci-cd.yml
@@ -47,3 +47,26 @@ jobs:
       - name: Deploy to S3 bucket
         run: aws s3 sync ./build s3://panel-getloyaltyapp --delete
         working-directory: loyalty-panel
+  push-docker-dev:
+    if: github.event_name != 'pull_request' && github.ref == 'refs/heads/develop'
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ secrets.DOCKER_REGISTRY_URL }}
+          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./loyalty-panel
+          push: true
+          tags: ${{ secrets.DOCKER_REGISTRY_URL }}/loyalty-panel:develop
