fix: panel docker image, probably fixed

--- a/.github/workflows/panel.ci-cd.yml
+++ b/.github/workflows/panel.ci-cd.yml
@@ -68,5 +68,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./loyalty-panel
+          build-args: NPM_TOKEN=${{secrets.READ_ORG_PACKAGES}}
           push: true
           tags: ${{ secrets.DOCKER_REGISTRY_URL }}/loyalty-panel:develop
