--- a/loyalty-backend/package.json
+++ b/loyalty-backend/package.json
@@ -2,15 +2,17 @@
   "name": "loyalty-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
+    "build": "tsc",
     "test": "jest --forceExit --runInBand",
-    "start": "node app.js",
-    "dev": "nodemon --ignore ./uploads/ app.js"
+    "start": "node ./build/app.ts",
+    "dev": "ts-node-dev --transpile-only app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@toppev/getloyalty-campaigns": "^1.0.5",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
@@ -32,12 +34,10 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "readline-sync": "^1.4.10",
-    "request": "^2.88.2",
     "sharp": "^0.26.3",
     "to-ico": "^1.1.5",
     "validator": "^13.6.0",
-    "web-push": "^3.4.4",
-    "@toppev/getloyalty-campaigns": "^1.0.5"
+    "web-push": "^3.4.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^10.0.28-alpha",
@@ -49,6 +49,7 @@
     "@types/eslint": "^7.28.0",
     "@types/express": "^4.17.13",
     "@types/express-unless": "^0.5.2",
+    "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/lodash": "^4.14.172",
     "@types/mime-types": "^2.1.1",
@@ -59,17 +60,19 @@
     "@types/passport": "^0.4.7",
     "@types/passport-local": "^1.0.34",
     "@types/readline-sync": "^1.4.4",
-    "@types/request": "^2.48.7",
     "@types/sharp": "^0.28.5",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.6.3",
     "@types/web-push": "^3.3.2",
-    "eslint": "^7.25.0",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-jest": "^24.3.6",
-    "jest": "^26.6.3",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.7",
     "supertest": "^4.0.2",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.2"
+    "ts-jest": "^27.0.7",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.4.4"
   }
 }
