--- a/scanner-app/pubspec.yaml
+++ b/scanner-app/pubspec.yaml
@@ -26,15 +26,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  qr_code_scanner: ^0.0.12
-  http: ^0.12.1
-  provider: ^4.1.2
-  flutter_secure_storage: ^3.3.3
+  cupertino_icons: ^1.0.4
+  qr_code_scanner: ^0.6.1
+  http: ^0.13.4
+  provider: ^6.0.1
+  flutter_secure_storage: ^5.0.2
 
 
 dev_dependencies:
-  flutter_launcher_icons: "^0.7.3"
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
 
