--- a/.github/workflows/scanner.build-and-release.yml
+++ b/.github/workflows/scanner.build-and-release.yml
@@ -20,9 +20,6 @@ jobs:
       - name: Test
         run: flutter test
         working-directory: scanner-app
-      - name: Build apk
-        run: flutter build apk
-        working-directory: scanner-app
   release:
     needs: test
     name: Build APK
@@ -37,9 +34,6 @@ jobs:
       - name: Pub get
         run: flutter pub get
         working-directory: scanner-app
-      - name: Test
-        run: flutter test
-        working-directory: scanner-app
       - name: Build apk
         run: flutter build apk # --split-per-abi
         working-directory: scanner-app
@@ -48,3 +42,39 @@ jobs:
         with:
           artifacts: "scanner-app/build/app/outputs/apk/release/*.apk"
           token: ${{ secrets.GITHUB_TOKEN }}
+  web-deployment:
+    needs: test
+    name: web deployment
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '12.x'
+      - uses: subosito/flutter-action@v1
+      - name: Pub get
+        run: flutter pub get
+        working-directory: scanner-app
+      - name: Build web
+        run: flutter build web
+        working-directory: scanner-app
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ secrets.DOCKER_REGISTRY_URL }}
+          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./scanner-app
+          file: docker/web.Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_REGISTRY_URL }}/loyalty-scanner-web:latest
