--- a/.github/workflows/scanner.build-and-release.yml
+++ b/.github/workflows/scanner.build-and-release.yml
@@ -1,7 +1,12 @@
 name: scanner-app test, build and release apk
 
 on:
+  pull_request:
+    paths:
+      - 'scanner-app/**'
   push:
+    paths:
+      - 'scanner-app/**'
     tags:
       - 'v*'
 
@@ -23,6 +28,7 @@ jobs:
   release:
     needs: test
     name: Build APK
+    if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     timeout-minutes: 60
     steps:
@@ -45,6 +51,7 @@ jobs:
   web-deployment:
     needs: test
     name: web deployment
+    if: github.event_name != 'pull_request' # && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
