fix: scanner ci cd trigger

--- a/.github/workflows/scanner.build-and-release.yml
+++ b/.github/workflows/scanner.build-and-release.yml
@@ -7,6 +7,11 @@ on:
   push:
     paths:
       - 'scanner-app/**'
+    branches:
+      - master
+      - develop # keep for now
+    tags:
+      - 'v*'
 
 jobs:
   test:
