--- a/.github/workflows/scanner.build-and-release.yml
+++ b/.github/workflows/scanner.build-and-release.yml
@@ -7,6 +7,7 @@ on:
   push:
     paths:
       - 'scanner-app/**'
+      - '.github/workflows/*scanner.*'
     branches:
       - master
       - develop # keep for now
@@ -85,6 +86,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./scanner-app
-          file: docker/web.Dockerfile
+          file: {context}/docker/web.Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_REGISTRY_URL }}/loyalty-scanner-web:latest
