change: polling url

--- a/loyalty-app/.env
+++ b/loyalty-app/.env
@@ -2,7 +2,7 @@
 
 # Dockerfile overrides this
 REACT_APP_API_URL=http://localhost:3001
-REACT_APP_POLLING_API_URL=https://api.getloyalty.app/messages
+REACT_APP_POLLING_API_URL=https://messages.api.getloyalty.app/v1
 # REACT_APP_PUBLIC_VAPID_KEY=BHV-G5Sh1tFz_zI1j7YElds2Ve1v-4027Nghh2XtEPMJXeO2qXewmm6DDY7XptSeYozmHhbkUVNwVAETH7SYzdI
 
 SKIP_PREFLIGHT_CHECK=true
