expose dev mongo for debugging and running tests

--- a/dev.docker-compose.yml
+++ b/dev.docker-compose.yml
@@ -20,6 +20,8 @@ services:
     image: mongo
     volumes:
       - dbdata:/data/db
+    ports:
+      - '27017:27017'
   panel:
     container_name: loyalty-panel
     build:
