feat: include qr scanner link in panel, manifest.json changes

--- a/panel/public/manifest.json
+++ b/panel/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Loyalty app control panel",
+  "name": "GetLoyalty.App - Control Panel",
   "short_name": "Loyalty Panel",
   "icons": [
     {
