fix: envsubst on app start, do not crash on invalid vapid key

--- a/loyalty-app/Dockerfile
+++ b/loyalty-app/Dockerfile
@@ -32,16 +32,16 @@ ARG API_URL=${FRONTEND_URL}/api
 ENV REACT_APP_API_URL $API_URL
 
 # If left intact, the init script will replace these with environment variables when the nginx container starts
-ARG WEBSITE_NAME="%REACT_APP_NAME%"
+ARG WEBSITE_NAME="\$REACT_APP_NAME"
 ENV REACT_APP_NAME $WEBSITE_NAME
 
-ARG WEBSITE_DESCRIPTION="%REACT_APP_DESCRIPTION%"
+ARG WEBSITE_DESCRIPTION="\$REACT_APP_DESCRIPTION"
 ENV REACT_APP_DESCRIPTION $WEBSITE_DESCRIPTION
 
-ARG WEBSITE_KEYWORDS="%REACT_APP_KEYWORDS%"
+ARG WEBSITE_KEYWORDS="\$REACT_APP_KEYWORDS"
 ENV REACT_APP_KEYWORDS $WEBSITE_KEYWORDS
 
-ARG PUBLIC_VAPID_KEY="%REACT_APP_PUBLIC_VAPID_KEY%"
+ARG PUBLIC_VAPID_KEY="\$REACT_APP_PUBLIC_VAPID_KEY"
 ENV REACT_APP_PUBLIC_VAPID_KEY $PUBLIC_VAPID_KEY
 
 
